--- a/UserControls/RichTextBoxIconEditor.xaml
+++ b/UserControls/RichTextBoxIconEditor.xaml
@@ -13,39 +13,70 @@
 
 	<StackPanel Orientation="Vertical" Margin="0,0,0,0">
 		<StackPanel Orientation="Horizontal">
-			<Button Content="B" FontWeight="Bold" Command="{x:Static EditingCommands.ToggleBold}" CommandTarget="{Binding ElementName=iconRTB}"></Button>
-			<Button Content="I" FontStyle="Italic" Command="{x:Static EditingCommands.ToggleItalic}" CommandTarget="{Binding ElementName=iconRTB}"></Button>
-			<Button Content="Clear" Click="ClearFormattingButton_Click" Margin="0,0,5,0"></Button>
+			<StackPanel Orientation="Horizontal">
+				<Button Content="B" FontWeight="Bold" Command="{x:Static EditingCommands.ToggleBold}" CommandTarget="{Binding ElementName=iconRTB}"></Button>
+				<Button Content="I" FontStyle="Italic" Command="{x:Static EditingCommands.ToggleItalic}" CommandTarget="{Binding ElementName=iconRTB}"></Button>
+				<Button Content="Clear" Click="ClearFormattingButton_Click" Margin="0,0,5,0"></Button>
+			</StackPanel>
 
-			<Button Content="M" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="Z" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="A" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="S" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="W" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="X" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
+			<StackPanel Orientation="Horizontal">
+				<Button Content="M" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="Z" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="A" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="S" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="W" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="X" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
 
-			<Button Content="f" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="s" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
+				<Button Content="s" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="f" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="u" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
 
-			<Button Content="a" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="O" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="T" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="m" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="R" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="t" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
+				<Button Content="a" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="O" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="T" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="m" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="R" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="t" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
 
-			<Button Content="D" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="F" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
+				<Button Content="D" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="F" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="C" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
 
-			<Button Content="r" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="v" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="p" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="d" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="w" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="c" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
+				<Button Content="r" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="v" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="p" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="d" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="w" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="c" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
 
-			<Button Content="I" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
-			<Button Content="L" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="I" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="L" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+			</StackPanel>
+		</StackPanel>
+		<StackPanel Orientation="Horizontal">
+			<StackPanel Orientation="Horizontal" Margin="80,5,0,0">
+				<Button Content="B" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="b" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="l" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
+
+				<Button Content="x" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="i" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="@" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="!" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="e" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="g" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="k" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
+
+				<Button Content="H" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="h" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="K" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="E" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
+				
+				<Button Content="(" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content=")" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="-" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click"></Button>
+				<Button Content="/" FontFamily="/Assets/#LoTR JiME Icons" Click="InsertButton_Click" Margin="0,0,5,0"></Button>
+			</StackPanel>
 		</StackPanel>
 		<RichTextBox x:Name="iconRTB" Margin="0,5" HorizontalAlignment="Stretch" AcceptsReturn="true" MinHeight="64" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
 			<RichTextBox.CommandBindings>
