--- a/Views/ScenarioWindow.xaml
+++ b/Views/ScenarioWindow.xaml
@@ -94,7 +94,7 @@
 		</Grid>
 
 		<!--collections-->
-		<Border  Grid.Row="1" Style="{StaticResource callout}" Margin="5">
+		<Border  Grid.Row="1" Style="{StaticResource callout}" Margin="5" Padding="5 0 5 0">
 			<StackPanel Orientation="Horizontal">
 				<StackPanel>
 					<TextBlock Text="Enable these Collections:" Style="{StaticResource Heading}"/>
@@ -105,6 +105,7 @@
 							<ColumnDefinition Width="auto"/>
 						</Grid.ColumnDefinitions>
 						<Grid.RowDefinitions>
+							<RowDefinition Height="*"/>
 							<RowDefinition Height="*"/>
 							<RowDefinition Height="*"/>
 						</Grid.RowDefinitions>
@@ -141,6 +142,12 @@
 							<TextBlock Text="c" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 							<CheckBox Click="collection_Click" x:Name="scorchersOfTheWildsCB" Content="Scorchers of the Wilds" FontWeight="Bold" Foreground="White" Padding="0,0,5,0">
 							</CheckBox>
+						</StackPanel>
+
+						<Rectangle Grid.Row="2" Grid.Column="0" />
+						<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0">
+							<TextBlock Text="/" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+							<CheckBox Click="collection_Click" x:Name="customCB" Content="Custom" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
 						</StackPanel>
 					</Grid>
 				</StackPanel>
